--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,12 +2,17 @@
     box-sizing: border-box;
     padding: 0px;
     margin: 0px;
+    font-family: 'Roboto', sans-serif;
+    color: #402217;
 }
 
 a {
     text-decoration: none;
     text-transform: uppercase;
 }
+
+
+/*Cabeçalho*/
 
 header {
     background-color: #F2D091;
@@ -19,23 +24,195 @@ header {
 
 .conteiner-cabecalho {
     width: 990px;
-    height: 43px;
     display: flex;
     justify-content: center;
+    flex-direction: row;
     align-items: center;
-}
-
-.menu {
-    padding: 0px 35px;
-    letter-spacing: 2px;
+    flex-wrap: wrap;
 }
 
 .menu-item {
     color: #402217;
+    padding: 30px;
+    letter-spacing: 3px;
 }
 
 .menu-item:hover {
     background-color: #7A9CFF;
     padding: 10px;
     color: #F2F2F2;
+    letter-spacing: normal;
+}
+
+/*Index*/
+
+.conteudo-principal {
+    margin: 40px;
+    height: 550px;
+}
+.conteiner-index{
+    width: 990px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+.titulo-site {
+    font-family: 'DynaPuff', cursive;
+    color: #402217;
+    padding: 40px 40px 0px 40px;
+    font-size: 70px;
+}
+
+.sub-titulo{
+    padding: 0px 40px 0px 40px;
+    color: #402217;
+    font-size: 20px;
+}
+
+.avatar{
+    position: absolute;
+    width: 300px;
+    right: 170px;
+    top: 130px;
+}
+
+.conteudo-secundario {
+    width: 800px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 20px;
+}
+
+.conteiner-sobre {
+    justify-content: center;
+}
+
+.titulo-sobre {
+    text-indent: 50px;
+}
+
+.descricao {
+    text-indent: 50px;
+    text-align: justify;
+    word-wrap: break-word;
+    flex-wrap: wrap;
+}
+
+.img-sobre {
+    width: 100px;
+    display: block;
+    margin: 0px auto;
+}
+
+.conteiner-rodape {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #F2D091;
+    padding: 10px;
+}
+
+@media (max-width: 1024px)  {
+    .conteiner-cabecalho {
+        width: auto;
+    }
+    .conteiner-index{
+        width: auto;
+    }
+    .conteudo-principal {
+        margin: 40px;
+        height: 990px;
+    }
+    .avatar{
+        position: static;
+    }
+}
+
+@media (max-width: 812px) and (min-width: 667px) {
+    
+    .conteiner-cabecalho {
+        width: auto;
+    }
+    .conteiner-index{
+        width: auto;
+    }
+    .descricao {
+        width: 550px;
+    }
+
+}
+
+@media (max-width: 600px) and (min-width: 568px) {
+    .titulo-site {
+        font-size: 55px;
+    }
+    .descricao {
+        width: 455px;
+    }
+    .conteiner-cabecalho {
+        width: auto;
+    }
+    .conteudo-principal{
+        height: auto;
+    }
+    .conteiner-index{
+        width: auto;
+    }
+    .img-sobre {
+        margin: 5px 150px;
+    }
+  
+}
+
+@media (max-width: 414px) {
+    header {
+        height: auto;
+        text-align: center;
+    }
+    .conteiner-cabecalho nav {
+        display: flex;
+        flex-direction: column;
+    }
+    .titulo-site {
+        font-size: 40px;
+    }
+    .conteiner-cabecalho {
+        width: auto;
+    }
+    .conteudo-principal{
+        height: auto;
+    }
+    .conteiner-index{
+        width: auto;
+    }
+    .descricao {
+        width: 300px;
+    }
+    .img-sobre {
+        margin: 0px 50px;
+    }
+    .conteiner-rodape h6 {
+        font-size: 14px;
+    }
+  
+}
+
+@media (max-width: 375px) {
+    .descricao {
+        width: 250px;
+    }
+}
+
+@media (max-width: 320px) {
+    .descricao {
+        width: 200px;
+    }
+    .conteiner-rodape h6 {
+        font-size: 12px;
+    }
+  
+
 }
